<resources>
    <string name="app_name">Lkw_AndroidApp</string>
    <string name="log_in">Log in</string>
    <string name="go_to_resigster">GO TO RESIGSTER</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="log_to_continue">Log to continue</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet ?</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="go_to_login">Go to login</string>
    <string name="you_already_have_an_account">You already have an account ?</string>
    <string name="make_sure_to_remember_your_information">Make sure to remember your information</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_new_user">Welcome New User</string>
    <string name="hello">Hello !</string>
    <string name="recover_heading">Forget Password ?</string>
    <string name="recover_your_password">Recover Your Password</string>
    <string name="add_post">add_post</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="loaidng">Loaidng...</string>
    <string name="scan">Scan</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="tap_to_scan">TAP TO SCAN</string>
    <string name="the_app_will_require_access_to_the_camera">The app will require access to the camera</string>
    <string name="qrcode">qrcode</string>
</resources>