<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textAlignment="center"
        android:gravity="center"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tap_to_scan"
            android:textSize="33sp"
            android:textStyle="bold"
            >
        </TextView>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/the_app_will_require_access_to_the_camera"
            tools:ignore="TextSizeCheck">
        </TextView>
        <ImageView
            android:id="@+id/qrCode"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/img_1"
            android:contentDescription="@string/qrcode">
        </ImageView>


    </LinearLayout>
</RelativeLayout>