<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ForgetPassword">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        tools:ignore="RtlCompat">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recover_heading"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don't worry we are here"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck">
        </TextView>

        <EditText
            android:id="@+id/etRecoverEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/enter_email"
            android:drawableStart="@drawable/email_w"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:autofillHints="">
        </EditText>


        <Button
            android:id="@+id/btnRecover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_btn"
            android:text="@string/recover_your_password"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorLink="#FFFFFF" />





    </LinearLayout>




</RelativeLayout>